--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
     "jest": "^27.2.0"
+  },
+  "dependencies": {
+    "marked": "^3.0.4"
   }
 }
