--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jest": "^27.2.0"
   },
   "dependencies": {
-    "marked": "^3.0.4"
+    "marked": "^3.0.4",
+    "node-fetch": "^2.6.0"
   }
 }
